# data-engineering-zoomcamp

./: pyproject.toml
01-docker-terraform/2_docker_sql/: 01_ny_taxi.py  Dockerfile  docker-compose.yaml  ingest_data.py
